# os-labs

./: .gitmodules
lab1/: CMakeLists.txt  MyVariant.hpp  README.md  main.cpp
lab1/src/: CLI.cpp  CLI.hpp  Cancelator.cpp  Cancelator.hpp  ComputationManager.hpp  Executor.hpp  FunctionExecutor.hpp  InThreadExecutor.hpp  InThreadExecutor.hxx  MutualDefs.hpp  Operations.hpp  ProcessRunner.hpp  ProcessRunner.hxx  ShortCircuitOperation.hpp  ShortCircuitOperation.hxx  TimeMeasuringExecutor.hpp  Utils.hpp
lab3/: Common.java  Process.java  Results.java  Scheduling.java  SchedulingAlgorithm.java  Summary-Processes  Summary-Results  User.java
